--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
-<body>
+<body class="body">
     <!--Шапка сайта-->
-    <header>
+    <header class="site-header">
         <nav>
             <p>
                 <a href="./index.html" class="logo link"><span class="logo-first">Web</span>
@@ -20,19 +20,19 @@
         </p>
 
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+          <li><a href="./index.html" class="links">Студия</a></li>
+                <li><a href="./portfolio.html" class="links">Портфолио</a></li>
+                <li><a href="" class="links">Контакты</a></li>
                 </ul>
                 <address>
           <ul class="list">
             <li>
-              <a href="malito:info@devstudio.com" class="mail link"
+              <a href="malito:info@devstudio.com" class="mail links"
                 >info@devstudio.com
               </a>
             </li>
             <li>
-              <a href="tel:+380961111111" class="telnumber link"
+              <a href="tel:+380961111111" class="telnumber links"
                 >+380961111111
               </a>
             </li>
